Исправлен метод GetShipments

--- a/ShipmentDataGrids.Lib/ShipmentDataGrids.Lib.csproj
+++ b/ShipmentDataGrids.Lib/ShipmentDataGrids.Lib.csproj
@@ -132,7 +132,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
-    <None Include="Config.json">
+    <None Include="ConfigArm.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Include="packages.config" />
