--- a/ShipmentDataGrids.Tests/ShipmentDataGrids.Tests.csproj
+++ b/ShipmentDataGrids.Tests/ShipmentDataGrids.Tests.csproj
@@ -47,11 +47,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="DbServiceTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="packages.config" />
+    <None Include="Resources\ShipmentDbEmpty.db3" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ShipmentDataGrids.Lib\ShipmentDataGrids.Lib.csproj">
+      <Project>{18caebab-1f7d-461a-b1dd-7989572da3d0}</Project>
+      <Name>ShipmentDataGrids.Lib</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
