--- a/ShipmentDataGrids.Tests/packages.config
+++ b/ShipmentDataGrids.Tests/packages.config
@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Dapper" version="2.0.35" targetFramework="net461" />
   <package id="NUnit" version="3.12.0" targetFramework="net461" />
+  <package id="NUnit3TestAdapter" version="3.16.1" targetFramework="net461" developmentDependency="true" />
 </packages>
