--- a/ShipmentDataGrids.Lib/ShipmentDataGrids.Lib.csproj
+++ b/ShipmentDataGrids.Lib/ShipmentDataGrids.Lib.csproj
@@ -106,7 +106,9 @@
   <ItemGroup>
     <None Include="Resources\excel-3-32.png" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="Resources\File-CSV-icon.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
