Для mssql исправлена строка подключения

--- a/ShipmentDataGrids.Lib/ConfigArm.json
+++ b/ShipmentDataGrids.Lib/ConfigArm.json
@@ -1,6 +1,6 @@
 {
   "DbName": "ShipmentDb",
-  "DbType": "mysql",
+  "DbType": "sqlexpress",
   "UserName": "asn_user",
-  "Password":  "asn_user"
+  "Password": "asn_user"
 }
