Добавлен промежуточный класс ConfigDto

--- a/ShipmentDataGrids.Lib/ShipmentDataGrids.Lib.csproj
+++ b/ShipmentDataGrids.Lib/ShipmentDataGrids.Lib.csproj
@@ -62,6 +62,7 @@
     <Compile Include="Interfaces\IConfig.cs" />
     <Compile Include="Models\Config.cs" />
     <Compile Include="Interfaces\IShipment.cs" />
+    <Compile Include="Models\ConfigDto.cs" />
     <Compile Include="Models\Shipment.cs" />
     <Compile Include="Models\SortableBindingList.cs" />
     <Compile Include="Services\DbService.cs" />
