feat: Добавлено поле адреса сервера server

--- a/ShipmentDataGrids.Lib/ConfigArm.json
+++ b/ShipmentDataGrids.Lib/ConfigArm.json
@@ -1,5 +1,6 @@
 {
   "Shipment": {
+    "Server": "ASUTP_5\\SQLEXPRESS",
     "DbName": "ShipmentDb",
     "DbType": "sqlexpress",
     "UserName": "asn_user",
