fix: Изменены поля по умолчанию в ConfigArm.json

--- a/ShipmentDataGrids.Lib/ConfigArm.json
+++ b/ShipmentDataGrids.Lib/ConfigArm.json
@@ -12,13 +12,13 @@
       "PostName": true,
       "TimeBegin": true,
       "TimeEnd": true,
-      "SetPoint": false,
-      "ResultMain": false,
-      "UnitMain": false,
-      "ResultSecondary": false,
-      "UnitSecondary": false,
-      "Density": false,
-      "Temperature": false,
+      "SetPoint": true,
+      "ResultMain": true,
+      "UnitMain": true,
+      "ResultSecondary": true,
+      "UnitSecondary": true,
+      "Density": true,
+      "Temperature": true,
       "ProductName": true,
       "TankName": true,
       "FinalStatus": true
