--- a/ShipmentDataGrids.Tests/packages.config
+++ b/ShipmentDataGrids.Tests/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Dapper" version="2.0.35" targetFramework="net461" />
-  <package id="NUnit" version="3.12.0" targetFramework="net461" />
-  <package id="NUnit3TestAdapter" version="3.16.1" targetFramework="net461" developmentDependency="true" />
+  <package id="NUnit" version="4.1.0" targetFramework="net48" />
+  <package id="NUnit3TestAdapter" version="4.5.0" targetFramework="net48" developmentDependency="true" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.3" targetFramework="net48" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net48" />
 </packages>
