feat: Добавлен экспорт ТТН по двойному клику

--- a/ShipmentDataGrids.Lib/ConfigArm.json
+++ b/ShipmentDataGrids.Lib/ConfigArm.json
@@ -22,7 +22,9 @@
       "ProductName": true,
       "TankName": true,
       "FinalStatus": true
-    }
+    },
+
+    "TemplatePath": "D:\\Project\\Config\\ShipmentTmpl.xlsx"
   }
 
 }
