--- a/ShipmentDataGrids.Lib/packages.config
+++ b/ShipmentDataGrids.Lib/packages.config
@@ -1,6 +1,29 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="ClosedXML" version="0.102.3" targetFramework="net48" />
+  <package id="ClosedXML.Report" version="0.2.10" targetFramework="net48" />
   <package id="Dapper" version="2.0.35" targetFramework="net461" />
+  <package id="DocumentFormat.OpenXml" version="2.16.0" targetFramework="net48" />
+  <package id="ExcelNumberFormat" version="1.1.0" targetFramework="net48" />
+  <package id="Irony.NetCore" version="1.0.11" targetFramework="net48" />
+  <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net48" />
+  <package id="morelinq" version="4.1.0" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net461" />
+  <package id="SixLabors.Fonts" version="1.0.0" targetFramework="net48" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
   <package id="System.ComponentModel" version="4.3.0" targetFramework="net461" />
+  <package id="System.IO" version="4.3.0" targetFramework="net48" />
+  <package id="System.IO.Packaging" version="6.0.0" targetFramework="net48" />
+  <package id="System.Linq.Dynamic.Core" version="1.3.8" targetFramework="net48" />
+  <package id="System.Memory" version="4.5.4" targetFramework="net48" />
+  <package id="System.Net.Http" version="4.3.4" targetFramework="net48" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
+  <package id="System.Runtime" version="4.3.0" targetFramework="net48" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.0" targetFramework="net48" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net48" />
+  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net48" />
+  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net48" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net48" />
+  <package id="System.Text.RegularExpressions" version="4.3.1" targetFramework="net48" />
+  <package id="XLParser" version="1.5.2" targetFramework="net48" />
 </packages>
