fix: Изменен пусть к адресу сервера в JSON файле

--- a/ShipmentDataGrids.Lib/ConfigArm.json
+++ b/ShipmentDataGrids.Lib/ConfigArm.json
@@ -1,6 +1,6 @@
 {
   "Shipment": {
-    "Server": "ASUTP_5\\SQLEXPRESS",
+    "Server": ".\\SQLEXPRESS",
     "DbName": "ShipmentDb",
     "DbType": "sqlexpress",
     "UserName": "asn_user",
